Adds a baseurl to fix links and references to assets.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: From Postpedagogy to Design Pedagogy
 permalink: pretty
+baseurl: /designpedagogy
 author:
   - last-name: Ceraso
     first-name: Steph
